Squashin bugs

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -153,7 +153,7 @@ select{
         display: none;
     }
     .container{
-        width: 90%;
+        width: 95%;
         margin: auto;
     }
     .d-flex{
@@ -173,7 +173,7 @@ select{
     }
     .jumbo{
         flex-direction: column;
-        padding: 2rem; 
+        padding: 1rem; 
     }
     .jumbo-half{
         width: 100%;
